--- a/index.html
+++ b/index.html
@@ -319,23 +319,23 @@
                     <a href="#">View Properties ></a>
                 </div>
                 <div class="locatsion-card">
-                    <h6>San Francisco, CA</h6>
+                    <h6>Los Angeles, CA</h6>
                     <a href="#">View Properties ></a>
                 </div>
                 <div class="locatsion-card">
-                    <h6>San Francisco, CA</h6>
+                    <h6>San Diego, CA</h6>
                     <a href="#">View Properties ></a>
                 </div>
                 <div class="locatsion-card">
-                    <h6>San Francisco, CA</h6>
+                    <h6>New York, NY</h6>
                     <a href="#">View Properties ></a>
                 </div>
                 <div class="locatsion-card">
-                    <h6>San Francisco, CA</h6>
+                    <h6>Las Vegas, NV</h6>
                     <a href="#">View Properties ></a>
                 </div>
                 <div class="locatsion-card">
-                    <h6>San Francisco, CA</h6>
+                    <h6>Miami, FL</h6>
                     <a href="#">View Properties ></a>
                 </div>
             </div>
